update fx dependencies for windows