@@ -29,6 +29,11 @@ public class connectController extends Application{
 	@Override
 	public void start(Stage PageAuthentification) throws Exception {
 		
+		
+		
+		Process process = Runtime.getRuntime().exec("java --module-path    /Users/leroishai/Documents/cybercar/projet_Cyber-Car/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -jar cybercar.jar"); 
+		System.out.println(process);
+		
 		Parent authentification  = FXMLLoader.load(getClass().getResource("/module/finance/projet Fxml/connexion.fxml"));
 		Scene fenetre1  = new Scene(authentification);
 		PageAuthentification.setScene(fenetre1);
